Works with java 17